--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<ul>
-    <li>tried</li>
-    <li>tired</li>
-    <li>retired</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shon</title>
+</head>
+<body>
+    <h1 style="text-align: center;">I'm shon 🐏.</h1>
+    <h2 style="text-align: center;">I build some , break some.</h2>
+</body>
+</html>
