add tracking code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shon</title>
+    <script defer src="https://us.umami.is/script.js" data-website-id="9ef503ca-fe17-45ba-8f82-77dff6586bd5"></script>
 </head>
 <body>
     <h1 style="text-align: center;">I'm shon 🐏.</h1>
